--- a/Logistic Regression/Logistic_Module_Implementation.ipynb
+++ b/Logistic Regression/Logistic_Module_Implementation.ipynb
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd.read_csv('../data/logisticX.csv')\n",
-    "Y = pd.read_csv('../data/logisticY.csv')\n",
+    "X = pd.read_csv('./data/logisticX.csv')\n",
+    "Y = pd.read_csv('./data/logisticY.csv')\n",
     "X = X.values\n",
     "Y = Y.values"
    ]
