--- a/KNN/mnist_image_recogniser.ipynb
+++ b/KNN/mnist_image_recogniser.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Knn_Module import KNN"
+    "from knn_module import KNN"
    ]
   },
   {
@@ -374,11 +374,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Sklearn's KNN gives us a accuracy of 91.2%"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
